# vision_vibration_wce

./: .gitignore  README.md  eval.py  infer.py  pyproject.toml  requirements.txt  run_ablation.py  train.py
configs/: default.yaml  smoke.yaml
configs/ablations/: film.yaml  frequency_adaptive_rho.yaml  frequency_direct_vibration.yaml  frequency_fixed_rho.yaml  frequency_global_rho.yaml  naive_concat.yaml  spatial_gate.yaml  vib_bigru.yaml  vib_single_mlstm.yaml  vib_tcn.yaml  vision_only.yaml
data/: README.md  sample_manifest.csv
docs/: paper_to_code_mapping.md  required_files.md
scripts/: make_synthetic_smoke_data.py  prepare_c3vdv2_manifest.py  prepare_endoslam_manifest.py  prepare_vrcaps_manifest.py  run_smoke_test.sh
src/vv_wce/data/: build.py  dataset.py  io.py
src/vv_wce/engine/: checkpoint.py  evaluator.py  trainer.py
src/vv_wce/geometry/: pose.py  warping.py
src/vv_wce/losses/: self_supervised.py
src/vv_wce/metrics/: depth.py  pose.py  robustness.py  synthesis.py
src/vv_wce/models/: common.py  decoders.py  fusion.py  model.py  vibration_encoder.py  vision_encoder.py
src/vv_wce/utils/: config.py
tests/: test_forward.py  test_losses.py  test_metrics.py
